--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,7 +295,7 @@ form button.btn-primary:hover {
   content: "";
   width: 100%;
   height: 100%;
-  background-color: rgba(24, 9, 53, 0.77);
+  background-color: #26264b;
   position: absolute;
   top: -25px;
   left: -1px;
